# HindSight

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
benchmarks/kdt/: README.md  results.json
deploy/: apprunner-service.yaml  cdr-ingestion.yaml  tariff-ingestion.yaml
examples/cdrs/: demo-cdrs.csv
examples/tariffs/: demo-rates.csv
migrations/: 001_sources.sql  002_assertions.sql  003_assertion_indexes.sql  004_decisions.sql  005_remediation.sql  006_agent_runs.sql  007_memory_embeddings.sql  008_investigation_contexts.sql  009_investigation_context_snapshots.sql  010_workspace_indexes.sql
scripts/: ops_preflight.py
src/hindsight/: __init__.py  __main__.py  cli.py  demo.py
src/hindsight/adapters/: __init__.py  base.py
src/hindsight/agents/: __init__.py  _trace.py  advisory.py  billing.py  investigation.py  remediation.py
src/hindsight/application/: __init__.py  demo.py
src/hindsight/benchmarks/: __init__.py  kdt.py
src/hindsight/core/: __init__.py  memory.py
src/hindsight/infrastructure/: agent_runs.py  bedrock.py  cdr_ingestion.py  database.py  sources.py  (+6 more)
tests/: test_agent_roles.py  test_bedrock.py  test_cdr_ingestion.py  test_cdr_ingestion_deployment.py  test_deployment.py  test_embeddings.py  test_investigation_agent.py  test_kdt_benchmark.py  test_managed_mcp.py  test_memory_search_api.py  test_ops_preflight.py  test_remediation.py  test_retroactive_rate.py  test_tariff_ingestion.py  test_tariff_ingestion_deployment.py  test_vector_memory.py  test_verdicts.py  test_web.py  test_web_runtime.py
(+35 files in other folders)
