[project]
name = "hindsight"
version = "0.1.0"
description = "Temporal decision accountability for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "boto3>=1.35,<2",
    "psycopg[binary]>=3.2.4,<4",
]

[project.scripts]
hindsight = "hindsight.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hindsight"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "hindsight/migrations"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
